--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ main{
   flex-wrap: wrap;
   gap: 15px;
   margin: 40px 70px 0px 70px; 
+  border-radius: 15px;
   p{
     margin: 10px 10px 20px 10px;
   }
@@ -71,14 +72,15 @@ main{
     }
     .card{ 
     box-shadow:0px 3px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px; 
+    border-radius: 10px;
     gap: 15px;
     }
     img{
       width: 100%;
       object-fit: cover;
       height: 200px;
-
+      border-radius: 15px;
+      /* border-radius: 15px; */
     }
   
 }  
@@ -135,3 +137,83 @@ footer{
 }
 
 
+.grid-municipio{
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 50px;
+  .m1{
+  display: flex;
+  justify-content: center;
+ img{
+  width: 350px;
+  height: 300PX;
+ }
+ P{
+  text-align: left;
+  margin-left: 10PX;
+  margin-top: 0;
+ }
+ }
+
+.m2{
+  display: flex;
+  justify-content: center;
+  margin: 0;
+ img{
+  width: 350px;
+  height: 300PX;
+  text-align: end;
+ }
+ P{
+  text-align: left;
+  margin-top: 0;
+ }
+}
+
+.m3{
+  display: flex;
+  justify-content: center;
+    margin: 0;
+ img{
+  width: 350px;
+  height: 300PX;
+ }
+ P{
+  text-align: left;
+  margin-left: 10PX;
+  margin-top: 0;
+ }
+}
+}
+
+.tabelas{
+  margin-left: 27%;
+  margin-right: 27%;
+  margin-bottom: 50px; 
+  margin-top: 40px;
+ *{ 
+  border-bottom: 1px #a8a7a7 solid ;
+  border-collapse: collapse;
+
+  }
+table{
+  width: 100%;
+}
+th{
+  text-align: start;
+  border-bottom: 3px #8e8e8e solid ;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+td{
+  font-size: 20px;
+  font-weight: 100;
+}
+
+td:nth-child(2){
+  text-align: end;
+}
+th:nth-child(2){
+  text-align: end;
+}
+}
