--- a/style.css
+++ b/style.css
@@ -118,7 +118,10 @@ main{
     a:nth-child(5){
     background-color: #25d366;
   }
+
 }
+
+
 
 
 .voltar{
@@ -145,8 +148,9 @@ footer{
   display: flex;
   justify-content: center;
  img{
-  width: 350px;
-  height: 300PX;
+
+  height: 250PX;
+    margin: 20px;
  }
  P{
   text-align: left;
@@ -216,4 +220,56 @@ td:nth-child(2){
 th:nth-child(2){
   text-align: end;
 }
+}
+
+
+.localizacao{
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+  width: 1040px;
+  display: flex;
+  justify-content: space-between;
+  h2,p{
+    text-align: start;
+  }
+    div{
+  iframe{
+    width: 500px;
+    height: 400px;
+  }
+}
+}
+
+.esporte{
+  text-align: center;
+
+  iframe{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 60%;
+    height: 70vh;
+  }
+}
+
+.turismo{
+  div{
+
+  display: flex;
+  margin: 40px 0;
+  img{
+    margin: 60px 20px 20px 20px;
+    width: 100%;
+    height: 300px;
+  }
+  p{
+    text-align: start;
+
+    padding-top: 50px;
+  }
+  h2{
+    text-align: left;
+  }
+}
+
 }
