--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ margin: 0px;
 
 header{
 display: flex;
-background-color: #000;
+background-color: #0B1F40;
 height: 100px;
 img{
   width: 80px;
@@ -140,22 +140,23 @@ footer{
 }
 
 
-.grid-municipio{
+.municipio{
   margin-left: 50px;
   margin-right: 50px;
   margin-top: 50px;
   .m1{
   display: flex;
   justify-content: center;
+  margin-bottom: 0;
  img{
-
   height: 250PX;
-    margin: 20px;
+  margin-bottom: 0;
  }
  P{
   text-align: left;
   margin-left: 10PX;
   margin-top: 0;
+  margin-bottom: 0;
  }
  }
 
@@ -165,8 +166,9 @@ footer{
   margin: 0;
  img{
   width: 350px;
-  height: 300PX;
+  height: 250PX;
   text-align: end;
+  margin: 0px 20px;
  }
  P{
   text-align: left;
@@ -180,13 +182,19 @@ footer{
     margin: 0;
  img{
   width: 350px;
-  height: 300PX;
+  height: 250PX;
  }
  P{
   text-align: left;
   margin-left: 10PX;
-  margin-top: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
  }
+}
+p{
+  text-align: start;
+  margin-top: 0px;
+  
 }
 }
 
@@ -224,52 +232,148 @@ th:nth-child(2){
 
 
 .localizacao{
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 40px;
   width: 1040px;
-  display: flex;
-  justify-content: space-between;
-  h2,p{
-    text-align: start;
+  margin: 0px auto;
+  .l1{
+    display: flex;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    p{
+      width: 50%;
+      text-align: start;
+      margin-right: 10px;
+    }
+    iframe{
+      width: 500px;
+    }
   }
-    div{
-  iframe{
-    width: 500px;
-    height: 400px;
+  .l2{
+    p{
+      font-weight: bold;
+      text-align: start;
+      margin-top: 40px;
+      margin-bottom: 0;
+    }
+    iframe{
+      width: 100%;
+      height: 600px;
+      margin-bottom: 40px;
+    }
   }
 }
-}
+
 
 .esporte{
   text-align: center;
-
+ div{
   iframe{
-    margin-top: 40px;
+    margin-top: 0;
     margin-bottom: 40px;
     width: 60%;
     height: 70vh;
   }
+  p{
+    text-align: start;
+    font-weight: bold;
+    margin-top: 40px;
+    margin-bottom: 5px;
+    margin-left: 20%;
+  }
+}
 }
 
-.turismo{
-  div{
 
+.turismo{
+  width: 1040px;
+  margin: 0px auto;
+  div{
   display: flex;
-  margin: 40px 0;
+  align-items: center;
+    margin-bottom: 40px;
   img{
-    margin: 60px 20px 20px 20px;
+    margin: 0px 10px;
     width: 100%;
     height: 300px;
   }
   p{
     text-align: start;
-
-    padding-top: 50px;
   }
-  h2{
-    text-align: left;
-  }
+  
+}
+h2{
+  text-align: start;
+  margin-bottom: 0;
+  margin-top: 40px;
 }
 
+}
+
+.comercio{
+  p{
+    text-align: start;
+    font-weight: bold;
+    margin-bottom: 0;
+    margin-top: 40px;
+    margin-bottom: 10px;
+  }
+.com1{
+  display: flex;
+  align-items: center;
+  margin: 0px 0 40px 0;
+  iframe{
+    width: 40%;
+    height: 360px;
+  }
+  ul{
+    width: 60%;
+    
+    li{
+      margin-bottom: 40px;
+      font-size: larger;
+    }
+  }
+}
+.com2{
+  margin: 20px 0 40px 0;
+  li{
+    margin-bottom: 20px;
+    font-size: larger;
+    font-weight: bold;
+    p{
+      margin-top: 0px;
+      margin-left: 10px;
+      font-size: small;
+      font-weight: 100;
+    }
+  }
+}
+}
+
+
+@media screen and (max-width: 800px){
+  main{
+    width: 100%;
+    .grid-home{
+  *{
+    flex-basis: 100%;
+   }
+  }
+
+  .localizacao{
+    
+    /* .l1, 
+    .l2{
+      align-items: center;
+      iframe{
+        width: 50%;
+      }
+    }  */
+  }
+
+
+
+
+
+
+  }
 }
